# gomoku

./: .gitignore  C++课程设计报告-五子棋-已填充.docx  CMakeLists.txt  Makefile  README.md  课程设计验收表-五子棋-已填充.docx
docs/: design.md  project-guide.md
docs/superpowers/plans/: 2026-04-27-gomoku-cpp.md  2026-05-14-ai-mode.md
docs/superpowers/specs/: 2026-04-27-gomoku-cpp-design.md  2026-05-14-ai-mode-design.md
include/Gomoku/: AI.h  Board.h  Game.h  Player.h  Replay.h  Types.h  UI.h
src/: AI.cpp  Board.cpp  Game.cpp  Player.cpp  Replay.cpp  Types.cpp  UI.cpp  boardwidget.cpp  boardwidget.h  main.cpp
tests/: test_core.cpp
